--- a/test-only-js/index.html
+++ b/test-only-js/index.html
@@ -12,10 +12,11 @@
 
 <body>
   <h1>ToDo リスト</h1>
+  <h2>Javascriptで作成</h2>
   <div class="card">
     <h2>React 学習</h2>
     <div class="action">
-      <button class="btn">Delete</button>
+      <button class="btn">削除</button>
     </div>
   </div>
 </body>
